--- a/.github/workflows/sonarqube-public-repo.yml
+++ b/.github/workflows/sonarqube-public-repo.yml
@@ -115,7 +115,8 @@ jobs:
       
     - name: SonarQube Scan
       if: ${{ inputs.visibility == 'public' }}
-      uses: sonarsource/sonarqube-scan-action@v5.1.0
+      uses: sonarsource/sonarqube-scan-action@v5.3.1
+      # was uses: sonarsource/sonarqube-scan-action@v5.1.0
       continue-on-error: true
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
