--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -463,6 +463,11 @@ jobs:
         with: 
           go-version: '1.24'
           check-latest: true
+      - name: Configure git for private Go modules
+        if: env.GA_BUILD_LANGUAGE == 'go'
+        env:
+          GOPRIVATE: ${{ inputs.go-private-modules }}
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
       - name: Go linting and security checks  
         if: env.GA_BUILD_LANGUAGE == 'go'
         run: |
@@ -558,6 +563,21 @@ jobs:
     needs: checkout
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Go
+        if: env.GA_BUILD_LANGUAGE == 'go'
+        uses: actions/setup-go@v5
+        with: 
+          go-version: '1.24'
+          check-latest: true
+      - name: Configure git for private Go modules
+        if: env.GA_BUILD_LANGUAGE == 'go'
+        env:
+          GOPRIVATE: ${{ inputs.go-private-modules }}
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
       - name: BUILD
         run: echo 'BUILD STEP'
   #   runs-on: ubuntu-latest
