--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -190,6 +190,17 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 'stable'
+          check-latest: true
+
+      - name: Configure git for private Go modules
+        env:
+          GOPRIVATE: ${{ inputs.go-private-modules }}
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
+
       - name: BlackDuck SCA scan
         id: black-duck-sca-scan
         run: |
@@ -225,11 +236,10 @@ jobs:
         go-version: 'stable'
 #        go-version: 1.24.2
 #        check-latest: true
-    # - name: Configure git for private modules
-    #   env:
-    #     GOPRIVATE: github.com/progress-platform-services/*
-    #       use ${{ inputs.go-private-modules }}
-    #   run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
+    - name: Configure git for private modules
+      env:
+        GOPRIVATE: ${{ inputs.go-private-modules }}
+      run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
     - name: create folder
       run: mkdir -p ./bin
@@ -269,11 +279,10 @@ jobs:
 #        go-version: 1.24.2
 #        check-latest: true
         
-      # - name: Configure git for private modules
-      #   env:
-      #     GOPRIVATE: github.com/progress-platform-services/*
-      #       use ${{ inputs.go-private-modules }}
-      #   run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
+      - name: Configure git for private modules
+        env:
+          GOPRIVATE: ${{ inputs.go-private-modules }}
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
       - name: set up license_scout
         uses: ruby/setup-ruby@v1
