--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -219,7 +219,6 @@ jobs:
 
       - name: BlackDuck SBOM scan
         uses: blackduck-inc/black-duck-security-scan@v2.1.1
-        continue-on-error: true  # Allow pipeline to continue even with policy violations
         env: 
           GOPRIVATE: ${{ inputs.go-private-modules }}
           DETECT_PROJECT_GROUP_NAME: ${{ inputs.blackduck-project-group-name}} #'Chef-Agents' # <the_parent_group_of_your_target_project>, Chef, Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services
@@ -246,7 +245,8 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: 'stable'
-        check-latest: true
+#        go-version: 1.24.2
+#        check-latest: true
     - name: Configure git for private modules
       env:
         GOPRIVATE: ${{ inputs.go-private-modules }}
@@ -287,7 +287,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: 'stable'
-          check-latest: true
+#        go-version: 1.24.2
+#        check-latest: true
         
       - name: Configure git for private modules
         env:
