created our own branch in commmon-worflows and adding new items from it.
Signed-off-by: John McCrae <john.mccrae@progress.com>

--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -66,7 +66,7 @@ on:
         required: false
         type: boolean
         default: true
-      blackduck-bridge-break:
+      bridge-break:
         description: 'Break the build if BlackDuck SCA scan finds new bridge vulnerabilities'
         required: false
         type: boolean
