--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -219,7 +219,7 @@ jobs:
           blackducksca_url: ${{ secrets.BLACKDUCK_SBOM_URL }}  # BLACKDUCK_URL, should be https://progresssoftware.app.blackduck.com/ 
           blackducksca_token: ${{ secrets.BLACKDUCK_SCA_TOKEN }}  # was BLACKDUCK_API_KEY
           # blackducksca_scan_failure_severities: 'BLOCKER,CRITICAL'
-          detect_args: --detect.excluded.detector.types=PIP --detect.source.path "${{ inputs.blackduck-detect-source-paths }}"   # ignore python and scan multiple source paths for Gemfile.lock
+          detect_args: --detect.excluded.detector.types=PIP --detect.source.path="${{ inputs.blackduck-detect-source-paths }}"   # ignore python and scan multiple source paths for Gemfile.lock
 
 ######################################################
 # original from https://github.com/progress-platform-services/common-github-actions/blob/main/.github/workflows/examples/ci-all-sbom-main.yml
