--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -373,8 +373,8 @@ env:
   REPO_NAME: ${{ github.event.repository.name }}
   PIPELINE_VERSION: '1.0.7'  # version of this CI pipeline
   PRIMARY_APPLICATION: 'default'   # Custom repo property [primaryApplication]: chef360, automate, infra-server, habitat, supermarket, licensing, downloads, chef-client, inspec, chef-workstation (or derivatives like habitat-builder)
-  #GA_BUILD_LANGUAGE: ${{ inputs.language}}  # Custom repo property [GABuildLanguage]: go, ruby, erlang, rust (replaces Language input)
-  #GA_BUILD_PROFILE: 'default'   # Custom repo property [GABuildProfile]: TBD
+  GA_BUILD_LANGUAGE: ${{ inputs.language}}  # Custom repo property [GABuildLanguage]: go, ruby, erlang, rust (replaces Language input)
+  GA_BUILD_PROFILE: 'default'   # Custom repo property [GABuildProfile]: TBD
   # APP_VERSION: $(cat VERSION) 
   FILE_PREFIX: $(echo "${{ github.repository }}" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
   DEFAULT_FILE_EXTENSION: ".json"
@@ -552,20 +552,20 @@ jobs:
           echo "Build language is set to ${{ env.GA_BUILD_LANGUAGE }}"
           echo "Build language passed in ${{ inputs.language }}"
       - name: Rust language checks
-        if: env.GA_BUILD_LANGUAGE == 'rust' 
+        if: inputs.language == 'rust' # env.GA_BUILD_LANGUAGE 
         run: echo 'crate linter'
         # https://github.com/rust-lang/rust-clippy
         # cargo clippy --all-targets --all-features -- -D warnings
     
       - name: Ruby language checks
-        if: env.GA_BUILD_LANGUAGE == 'ruby'
+        if: inputs.language == 'ruby'
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
         # generate gemfile.lock (TODO: move this below to OWASP)
       - name: RuboCop Lint
-        if: env.GA_BUILD_LANGUAGE == 'ruby' 
+        if: inputs.language == 'ruby'
         run: |
           echo 'ruby linter'
         # gem install rubocop
@@ -581,18 +581,18 @@ jobs:
         # Bundler Audit Action is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation.
 
       - name: Go language checks
-        if: env.GA_BUILD_LANGUAGE == 'go'
+        if: inputs.language == 'go'
         uses: actions/setup-go@v5
         with: 
           go-version: '1.24'
           check-latest: true
       - name: Configure git for private Go modules
-        if: env.GA_BUILD_LANGUAGE == 'go'
+        if: inputs.language == 'go'
         env:
           GOPRIVATE: ${{ inputs.go-private-modules }}
         run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
       - name: Go linting and security checks  
-        if: env.GA_BUILD_LANGUAGE == 'go'
+        if: inputs.language == 'go'
         run: echo "Running Go linting and security checks"
       # TODO: THESE DO NOT RUN IN CHEF ORG - need to create copies in common-github-actions/.github/actions/
       # we can download and install them manually here if needed
@@ -699,15 +699,17 @@ jobs:
     runs-on: ubuntu-latest
     # TODO: make this matrix strategy, and allow language compiler version overrides
     steps:
-      - name: 'Build language: ${{ env.GA_BUILD_LANGUAGE }}'
-        run: echo "Building application in language ${{ env.GA_BUILD_LANGUAGE }}"
+      - name: 'Build language: ${{ inputs.language }}'
+        run: |
+          echo "Building application in language ${{ env.GA_BUILD_LANGUAGE }}"
+          echo " passed in with ${{ inputs.language }}"
       - name: 'Go build'
-        if: ${{ env.GA_BUILD_LANGUAGE == 'go' && env.GA_BUILD_PROFILE == 'cli' }}
+        if: ${{ inputs.language == 'go' && env.GA_BUILD_PROFILE == 'cli' }}
         run: |
           go mod tidy
           go build -o ./bin/${{ env.REPO_NAME }} .
       - name: 'Go unit tests'
-        if: ${{ env.GA_BUILD_LANGUAGE == 'go' && inputs.unit-tests == true && env.GA_BUILD_PROFILE == 'cli' }}
+        if: ${{ inputs.language == 'go' && inputs.unit-tests == true && inputs.build-profile == 'cli' }}
         run: |
           go test -v ./...
 #   run: go test -v -coverprofile="coverage.out" ./... and upload artifact!
@@ -720,7 +722,7 @@ jobs:
       # simple bundle install to generate gemlock(puts them in directory vendor/bundle, and uses actual gemspec for deployment to get multi-architecture ), then build gem
       # https://bundler.io/man/bundle-install.1.html
       - name: 'Ruby build'
-        if: ${{ env.GA_BUILD_LANGUAGE == 'ruby' && env.GA_BUILD_PROFILE == 'cli' }}        
+        if: ${{ inputs.language == 'ruby' && inputs.build-profile == 'cli' }}        
         run: |
           mkdir -p vendor
           if [ -f "Gemfile.lock" ]; then
